# onlymetrix-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: autoresearch.py  custom_analysis.py  quickstart.py  retail_churn.py
onlymetrix/: __init__.py  analysis.py  analysis_v2.py  cli.py  client.py  custom_analysis.py  dbt.py  export.py  metricflow.py  models.py  rust_bridge.py  sql_converter.py
onlymetrix/integrations/: crewai.py  langchain.py
tests/: test_client.py  test_dbt.py  test_integrations.py  test_live.py  test_models.py  test_sql_converter.py
