[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onlymetrix"
version = "0.6.4"
description = "Governed data access for AI agents. Connect to Snowflake, Postgres, or any warehouse with curated metrics, PII masking, and audit trails."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2,<1.0"]
crewai = ["crewai>=0.80,<1.0"]
sql = ["sqlglot>=20.0"]
all = ["langchain-core>=0.2,<1.0", "crewai>=0.80,<1.0", "sqlglot>=20.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "sqlglot>=20.0"]

[project.scripts]
omx = "onlymetrix.cli:main"

[tool.setuptools.packages.find]
include = ["onlymetrix*"]
